# indie-beets

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-build.txt
.github/workflows/: build.yml
config/: default_config.yaml
scripts/: build.py  changelog.py  lipo_merge.py  macos_fix_rpaths.sh  next_version.py  package.py  smoke.py  smoke_clean.sh  stage_binaries.py  stage_gstreamer.py
src/indie_beets/: __init__.py  __main__.py  runtime_env.py
