[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "indie-beets"
# Mirrors the pinned beets version below — indie-beets is just a standalone,
# batteries-included build of beets, so its release number IS the beets version.
# The authoritative release version is computed from the bundled beets at
# package time (scripts/package.py); keep this in sync when bumping beets.
version = "2.10.0"
description = "Standalone, batteries-included executable builds of the beets music manager"
requires-python = ">=3.10"
readme = "README.md"

# Pinned so CI and local builds are reproducible. beets is the app we freeze;
# the rest are the optional runtime deps of the plugins we want to ship.
# NOTE: beets is held at 2.10.0 (not 2.11.0) because beets-filetote 1.3.4 imports
# MULTIDISC_MARKERS / MULTIDISC_PAT_FMT from beets.importer.tasks, which beets
# privatized/renamed in 2.11.0. 2.10.0 is the newest beets both bundled plugins
# support. Revisit when filetote releases 2.11-compatible support.
dependencies = [
    "beets==2.10.0",
    # chroma plugin: acoustic fingerprinting via Chromaprint/AcoustID
    "pyacoustid",
    # common metadata/network deps pulled in by core + popular plugins
    "requests",
    "mutagen",
    "pyyaml",
    # lyrics plugin: HTML scraping of lyrics pages
    "beautifulsoup4",
    "langdetect",
    # extra bundled plugins (native, batteries-included)
    "beetcamp",          # Bandcamp metadata source -> beetsplug.bandcamp
    "beets-filetote",    # copy/move non-music files on import -> beetsplug.filetote
]

[project.optional-dependencies]
# The build toolchain. Kept separate so the frozen app doesn't carry it.
build = [
    "nuitka==2.8",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.indie-beets]
# Release version is "<beets version>-<build>" (e.g. 2.10.0-1). The build number
# is computed automatically at release time from existing git tags
# (scripts/next_version.py) — no static value to maintain here.

# Single source of truth for which beets plugins are "batteries included".
# Consumed by scripts/build.py to force-include the right modules for Nuitka.
bundled-plugins = [
    "chroma",
    "convert",
    "replaygain",
    "fetchart",
    "lyrics",
    "lastgenre",
    "duplicates",
    "info",
    "missing",
    "scrub",
    "bandcamp",
    "filetote",
]
