[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "indie-beets"
# Mirrors the pinned beets version below — indie-beets is just a standalone,
# batteries-included build of beets, so its release number IS the beets version.
# The authoritative release version is computed from the bundled beets at
# package time (scripts/package.py); keep this in sync when bumping beets.
version = "2.12.0"
description = "Standalone, batteries-included executable builds of the beets music manager"
requires-python = ">=3.10"
readme = "README.md"

# Pinned so CI and local builds are reproducible. beets is the app we freeze;
# the rest are the optional runtime deps of the plugins we want to ship.
# (History: stayed on 2.10.0 while beets-filetote < 1.3.5 imported symbols beets
# 2.11.0 renamed; filetote 1.3.5 fixed that -> 2.11.0; verified filetote 1.3.6 on
# beets 2.12.0 -> now 2.12.0.)
dependencies = [
    "beets==2.12.0",
    # chroma plugin: acoustic fingerprinting via Chromaprint/AcoustID
    "pyacoustid",
    # common metadata/network deps pulled in by core + popular plugins
    "requests",
    "mutagen",
    "pyyaml",
    # lyrics plugin: HTML scraping of lyrics pages
    "beautifulsoup4",
    "langdetect",
    # lastgenre plugin: Last.fm genre tagging. Pinned: pylast 7.1.0 swapped its
    # HTTP stack to the brand-new httpx2 (pydantic) — pin to the version we
    # evaluated so a future pylast/httpx2 churn can't slip into a build unvetted.
    "pylast==7.1.0",
    # extra bundled plugins (native, batteries-included)
    "beetcamp",          # Bandcamp metadata source -> beetsplug.bandcamp
    "beets-filetote",    # copy/move non-music files on import -> beetsplug.filetote
    "beets-vgmdb",       # VGMdb metadata source -> beetsplug.VGMplug (needs lxml)
    "lxml",              # parser used by beets-vgmdb (BeautifulSoup "lxml")
]
# NOTE: beets-vgmdb declares a dependency on `pathlib` — that's the obsolete PyPI
# backport (pathlib is stdlib since 3.4) and it BREAKS on modern Python / Nuitka.
# It must be uninstalled after `pip install` (CI does this) and is never listed in
# requirements-build.txt.

[project.optional-dependencies]
# The build toolchain. Kept separate so the frozen app doesn't carry it.
build = [
    "nuitka==4.1.3",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.indie-beets]
# Release version is "<beets version>-<build>" (e.g. 2.10.0-1). The build number
# is computed automatically at release time from existing git tags
# (scripts/next_version.py) — no static value to maintain here.

# Single source of truth for which beets plugins are "batteries included".
# Consumed by scripts/build.py to force-include the right modules for Nuitka.
bundled-plugins = [
    "chroma",
    "convert",
    "replaygain",
    "fetchart",
    "lyrics",
    "lastgenre",
    "duplicates",
    "info",
    "missing",
    "scrub",
    "bandcamp",
    "filetote",
    "VGMplug",
]
